<resources>
    <string name="app_name">321DO!</string>
    <string name="action_settings">Settings</string>
    <string name="noteOptionEdit">Edit Note</string>
    <string name="noteOptionDelete">Delete Note</string>
    <string name="noteOptionTick">Complete/Incomplete</string>
    <string name="sortOptionCreation">Creation (default)</string>
    <string name="sortOptionDueDate">Due Date</string>
    <string name="sortOptionImportance">Importance</string>
    <string name="sortOptionTag">Tag</string>
    <string name="sortOptionTitle">Order Notes by:</string>
    <string name="newNoteTitle">Add a new Note</string>
    <string name="editNoteTitle">Edit Note</string>
    <string name="editNoteDateTimeEditTitle">Set Date/Time</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="confirmButtonText">Done</string>
    <string name="editTitleTitle">Change Title</string>
    <string name="editTitleHint">Change Title</string>
    <string name="editDescriptionTitle">Change Description</string>
    <string name="editDescriptionHint">Add a more accurate description of your note here!</string>
    <string name="editTagTitle">Assign a Tag</string>
    <string name="editTagHint">None</string>
    <string name="editDateTimeHint">No date/time set</string>
    <string name="editDateTimeButtonText">Set Date/Time</string>
    <string name="editPriorityTitle">Set Priority</string>
    <string name="editUrgencyTitle">Set Urgency</string>
    <string name="errorNoteText">If you are reading this there are some problems</string>
    <string name="newNoteMenuString">Add Note</string>
    <string name="sortNoteMenuString">Sort Notes</string>
    <string name="faqMenuString">FAQs</string>
    <string name="exitMenuString">Exit</string>
    <string name="multipleDeleteTitle">Delete All</string>
    <string name="multipleTickTitle">Tick All</string>
    <string name="alarmTitle">Activate Alarm</string>
    <string name="switchAlarmTitle">Alarm</string>
    <string name="errorEmptyField">Empty field!</string>
    <string name="errorEmptyTitle">Note MUST have a title!</string>
    <string name="messageChangesApplied">Changes applied</string>
    <string name="messageChangesNotApplied">Changes NOT SAVED</string>
    <string name="errorDateTimePassed">Date/Time already passed</string>
    <string name="errorNoNeedForAlarm">Note completed, no need for reminder</string>
    <string name="checkListTitle">Sub activities</string>
    <string name="searchNoteMenuString">Search</string>
    <string name="errorEmptyListView">Nothing to show</string>
    <string name="checkListButtonText">Checklist</string>
    <string name="messageAlarmOff">Alarm OFF</string>
    <string name="messageAlarmOn">Alarm ON</string>
    <string name="saveButtonText">Save</string>
    <string name="editOptionsMedia">Media Attachments</string>
    <string name="editOptionsChecklist">Sub Activities</string>
    <string name="editOptionsAlarm">Reminder</string>
    <string name="editOptionsDetails">Details</string>
    <string name="editNoteMediaTitle">Media management</string>
    <string name="chooseMediaImageText">Choose Image</string>
    <string name="noteOptionClone">Clone</string>
    <string name="drawerOptionToday">Today</string>
    <string name="drawerOptionTomorrow">Tomorrow</string>
    <string name="drawerOptionNext7Days">Next 7 Days</string>
    <string name="drawerOptionPlanned">Planned</string>
    <string name="drawerOptionExpired">Expired</string>
    <string name="drawerOptionCompleted">Completed</string>
    <string name="drawerOptionAll">All</string>
    <string name="errorEmptyMediaImage">No Image Assigned</string>
    <string name="resetButtonText">Reset</string>
    <string name="notificationOptionDismiss">Dismiss</string>
    <string name="notificationOptionTick">Done</string>
    <string name="notificationOptionSnooze">Snooze</string>
    <string name="notificationMessageHYDI">Have you done it?</string>
    <string name="notificationMessageTaggedAs">Tagged as :  </string>
    <string name="notificationMessageImportance">Importance :   </string>
    <string name="toastNoteDismissed">Note dismissed</string>
    <string name="toastNoteSnoozed">Alarm snoozed</string>
    <string name="toastNoteCompleted">Task completed!</string>
    <string name="optionMediaChooseFromGallery">Choose from Gallery</string>
    <string name="optionMediaTakePhoto">Take Photo</string>
    <string name="optionMediaDeleteAttachment">Delete Attachment</string>
    <string name="sortOptionWithAttachment">With Attachments</string>
    <string name="drawerOptionAttachment">With Attachments</string>
    <string name="errorAudioRecord">Error encountered while recording audio</string>
    <string name="audioRecordMessage">Please speak now</string>
    <string name="title_activity_note_location">Map</string>
    <string name="clearCompletedMenuString">Clear completed notes</string>
    <string name="snoozeDialogMessage">Remind me again in…</string>
    <string name="snoozeDialogHours">Hours</string>
    <string name="snoozeDialogMinutes">Minutes</string>
    <string name="checklistButtonText">Add</string>
    <string name="checklistHintText">Insert new item</string>
    <string name="deleteOptionCheckListText">Complete</string>
    <string name="snackbarDeleteMessage">Note successfully deleted!</string>
    <string name="snackbarUndo">UNDO</string>
    <string name="snackbarCloneMessage">Note successfully cloned!</string>
    <string name="noteCreatedMessage">Note successfully created!</string>
    <string name="deleteAllCompletedMessage">Are you really sure?\nDeleted notes cannot be recovered</string>
    <string name="recordButtonStop">Stop recording</string>
    <string name="recordButtonStart">Start recording</string>
    <string name="playButtonStop">Stop playing</string>
    <string name="playButtonStart">Start playing</string>
    <string name="emptyCheckListMessage">No sub activities scheduled</string>
    <string name="setLengthHint">Not set</string>
    <string name="setLengthMessage">Estimated Length (in minutes)</string>
    <string name="pdfImageAttachment">Image Attachment</string>
    <string name="exportPDFMenuString">Export current view to PDF</string>
    <string name="notificationMessageLength1">You should need ~</string>
    <string name="notificationMessageLength2">minutes</string>
    <string name="notificationAudioButtonTitle">Play Audio</string>
    <string name="deleteAudioMessage">Do you really want to delete the audio record?\nThe file will be lost permanently</string>
    <string name="deleteImageMessage">Do you really want to delete the image attachment?</string>
    <string name="deleteAudioButtonTitle">Delete Audio</string>
    <string name="imageContentDescription">Note attachment chosen by the user</string>
    <string name="convertingPDFmessage">Converting view to PDF...</string>
    <string name="showPDFmessage">"File saved in "</string>
    <string name="errorPDFmessage">Error loading pdf file</string>
    <string name="errorNoExistingTag">You haven\'t assigned any tag yet</string>
    <string name="question1Title">What does each color mean?</string>
    <string name="question1Content">Green = Note Completed\nBlue = Note Planned (you haven\'t done it yet but you still haven\'t reach your deadline)\nRed = Note Expired (the due date is passed but you haven\'t completed the task)</string>
    <string name="question2Title">What does a note contains?</string>
    <string name="question2Content">Text details: you can assign a title, a description and some other more specific attributes useful for organizing your tasks (e.g. tags, grade of importance etc)\n Alarm: you can choose to turn it on to receive a reminder notification at the time set\n Sub activities: need to go grocery shopping? We got you covered!\n Attachments: too busy to write down a note in every detail? Just snap a photo or record an audio message related to the task. Quick and easy!</string>
    <string name="question3Title">I have accidentally deleted from the gallery an image used in a note...</string>
    <string name="question3Content">Don\'t worry, 321DO! saves it\'s own copy of the image so you can safely delete the original file to free space.</string>
    <string name="question4Title">Can I recover a deleted note? What about a deleted attachment?</string>
    <string name="question4Content">No, you cannot recover a deleted note, you have however a limited time to cancel the delete operation immediately after (a quick UNDO option should appear on the bottom of the screen).\n When you delete a note, every attachment is also deleted (otherwise it will occupy memory in vain); audio messages in particular are not recoverable (for images see previous question).</string>
    <string name="question5Title">Making a note is quick, but I want to be quicker!</string>
    <string name="question5Content">You can, just add the 321DO! widget to your home!</string>
    <string name="question6Title">How does reminders works?</string>
    <string name="question6Content">1. You set a date and a time from the edit options\n 2. When the given time comes you will receive a notification\n 3. The notification will give you three options, complete the task, dimiss the task (that will then be considered expired) and snooze the alarm.\n The expanded notification will also show you all the details regarding the pending task.\n 4. If you choose to snooze the notification you will have to pick a costum amount of time and the alarm will be represented to you later</string>
    <string name="question7Title">How does tags/categories works?</string>
    <string name="question7Content">You can assign a tag to each note to organize them by your needs.\n By default there aren\'t any tag, a tag is created every time the user assign a new one to a note.\n Existing tags will be suggested during the editing of the notes.\n You can also use the search bar to find notes that contains a given tag.</string>
    <string name="question8Title">What happens when I clone a note?</string>
    <string name="question8Content">A new note is created and every textual information is copied from the original note, the other fields are set to default values.\n Attachments are not copied to preserve memory, due dates and alarms neither because you are probably going to set a new one right?</string>
    <string name="question9Title">You said default values, what does that mean?</string>
    <string name="question9Content">When you create a note you probably won\'t have time to choose each detail so 321DO! covers you by filling the following field with the following values:\n Title - Current time\n Due Date - Tomorrow morning\n Priority and Urgency - Normal\n Attachments - None\n Every other field is left blank.</string>
    <string name="creditsTitle">Credits</string>
    <string name="creditsContent">321DO! is an app created entirely by me, Luca Alessio: I\'m a bachelor student in Computer Science at University of Padua and I\'ve worked on this application during my stage period at Ceremit srl.\nI\'ve found a bit hard to enter in the world of Android Development so I intend to share what I\'ve learned with other students and enthusiasts: you can find the source code (in all it\'s glory and bad practices) here:\nhttps://github.com/lalessio/321do</string>
    <string name="donateMessage"><![CDATA[If you have any questions (or want to donate something via Paypal <3) you can contact me at\nlucaalessio@gmail.com]]></string>


</resources>
