<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.reminders.app.RemindersActivity">
    <item
        android:id="@+id/action_search"
        android:title="@string/searchNoteMenuString"
        app:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/search"
        android:orderInCategory="100"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item android:id="@+id/action_sort"
    android:title="@string/sortNoteMenuString"
    android:orderInCategory="200"
    app:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/sort"/>
    <item android:id="@+id/action_new"
        android:title="@string/newNoteMenuString"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item android:id="@+id/action_clear_completed"
        android:title="@string/clearCompletedMenuString"
        android:orderInCategory="400"
        app:showAsAction="never" />
    <item android:id="@+id/action_faq"
        android:title="@string/faqMenuString"
        android:orderInCategory="500"
        app:showAsAction="never" />
    <item android:id="@+id/action_pdf"
        android:title="@string/exportPDFMenuString"
        android:orderInCategory="600"
        app:showAsAction="never" />
    <item android:id="@+id/action_exit"
        android:title="@string/exitMenuString"
        android:orderInCategory="700"
        app:showAsAction="never" />
</menu>