<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="25dp">

        <TextView
            android:text="@string/errorEmptyField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:textSize="40sp"
            android:gravity="center"
            android:id="@+id/textViewNotificationTitle" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:id="@+id/imageViewNotification"/>

        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNotificationDescription" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:id="@+id/tagLayout">
            <TextView
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notificationMessageTaggedAs"
                android:layout_margin="2dp"/>
            <TextView
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewNotificationTag"
                android:layout_margin="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center">
            <TextView
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notificationMessageImportance"
                android:layout_margin="2dp"/>
            <TextView
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewNotificationImportance"
                android:layout_margin="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:id="@+id/lengthLayout">
            <TextView
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notificationMessageLength1" />
            <TextView
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alla" />
            <TextView
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notificationMessageLength2" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificationAudioButtonTitle"
            android:textColor="@color/light_grey"
            style="@style/genericButton"
            android:id="@+id/buttonAudioAttachment"/>

        <TextView
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/notificationMessageHYDI" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="4dp"
            android:gravity="center_horizontal">
            <Button
                style="@style/genericButton"
                android:text="@string/notificationOptionDismiss"
                android:textColor="@color/red"
                android:id="@+id/buttonNotificationDismiss"/>
            <Button
                style="@style/genericButton"
                android:text="@string/notificationOptionSnooze"
                android:id="@+id/buttonNotificationSnooze"
                android:textColor="@color/blue"/>
            <Button
                style="@style/genericButton"
                android:text="@string/notificationOptionTick"
                android:id="@+id/buttonNotificationTick"
                android:textColor="@color/green"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>