<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.reminders.app.RemindersActivity">
    <item android:id="@+id/action_new"
        android:title="@string/newNoteMenuString"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_sort"
        android:title="@string/sortNoteMenuString"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <!-- TODO settings -->
    <item android:id="@+id/action_settings"
        android:title="@string/settingsMenuString"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item android:id="@+id/action_exit"
        android:title="@string/exitMenuString"
        android:orderInCategory="400"
        app:showAsAction="never" />
    <!--<item android:id="@+id/action_test"
        android:title="Test"
        android:orderInCategory="500"
        app:showAsAction="never" />-->
</menu>