<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/editNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewEditNoteTitle" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listviewEditNoteOptions">
    </ListView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/cancelButtonText"
            android:id="@+id/button_annulla"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/saveButtonText"
            android:layout_margin="4dp"
            android:id="@+id/button_save" />

    </LinearLayout>

</LinearLayout>